[package]
name = "message_verifier"
version = "1.0.1"
description = "Rust Message Verifier library compatible with Rails' MessageVerifier and MessageEncryptor"
repository = "https://github.com/mikeycgto/message_verifier"
documentation = "https://docs.rs/message_verifier"
license = "MIT"
authors = ["Michael J Coyne <mikeycgto@gmail.com>"]
keywords = ["crypto", "security", "rails", "cookies", "sessions"]

[dependencies]
rustc-serialize = "^0.3"
rust-crypto = "^0.2"
rand = "0.3"
error-chain = "0.7.1"
