[package]
name = "message_verifier"
version = "2.0.0"
edition = "2021"
description = "Rust Message Verifier library compatible with Rails' MessageVerifier and MessageEncryptor"
repository = "https://github.com/mikeycgto/message_verifier"
documentation = "https://docs.rs/message_verifier"
license = "MIT"
authors = ["Michael J Coyne <mjc@hey.com>", "Sean Linsley <code@seanlinsley.com>"]
keywords = ["crypto", "security", "rails", "cookies", "sessions"]

[dependencies]
aes = "0.8.3"
aes-gcm = "0.10.2"
base64 = "0.21.4"
cbc = { version = "0.1.2", features = ["alloc"] }
error-chain = "0.12.4"
hex = "0.4.3"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha1 = "0.10.5"
subtle = "2.5.0"
digest = "0.10.7"
